--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header{
     background-color: var(--cor03);
     height: 150px;
     padding-top: 30px;
+    padding-bottom: 1px;
     text-align: center;
     text-shadow: 2px 3px 6px rgba(0, 0, 0, 0.349);
     background-image: linear-gradient(to bottom, var(--cor02), var(--cor04));
